--- a/css/header.css
+++ b/css/header.css
@@ -43,7 +43,7 @@ p.notification-nav a {
     text-decoration: underline;
 }
 header {
-	background: #f2fafb;
+	background: #ffffff;
 	}
 .header-wrap {
     height: 78px;
