--- a/css/oz.css
+++ b/css/oz.css
@@ -648,7 +648,7 @@ button.btn-search i {
   top: 29px;
   border-width: 0.4vmin 0.4vmin 0 0;
   border-style: solid;
-  border-color: #0b6e89;
+  border-color: #d67e51;
   transition: 0.2s ease;
   display: block;
   transform-origin: 100% 0;
