--- a/css/base.css
+++ b/css/base.css
@@ -107,7 +107,7 @@ a.cta {
     border-radius: 49px;
 }
 .cta-white {
-    background: #ffffff;
+    background: #fbb03b;
     color:#000
 }
 .cta-blue {
