--- a/css/header.css
+++ b/css/header.css
@@ -155,7 +155,7 @@ svg.search-icon {
     width: 30px;
     height: 30px;
     visibility: visible;
-    fill: #a4bac0;
+    fill: #fbb03b;
 }
 #search-form .close-icon-small {
     visibility: hidden;
