--- a/css/footer.css
+++ b/css/footer.css
@@ -1,5 +1,5 @@
 footer.footer {
-    background: #ecf3f5;
+    background: #f5f5f5;
     display: flex;
     flex-direction: column;
 }
@@ -26,7 +26,7 @@ div#section-3 ul {
 }
 div#section-3 h3 {
     margin-bottom: 20px;
-    color: #0b6e89;
+    color: #163d3c;
     text-transform: uppercase;
     font-size: 14px;
 }
@@ -62,7 +62,7 @@ div#footer-cap {
 .socialmedia-footer svg {
     width: 48px;
     padding: 12px;
-    fill: #0b6e89;
+    fill: #163d3c;
 }
 
 /***FOOTER BOTTOM END***/
