--- a/css/base.css
+++ b/css/base.css
@@ -10,7 +10,7 @@ body {
     background-color: #f8f8f8;
     width: 100%;
 }
-h1, h2, h3, h4, h5, b {font-family: inherit;}
+h1, h2, h3, h4, h5, b {font-family: "Manrope", sans-serif;}
 .container-width-1100 {
     width: 1100px;
     margin: 0 auto;
@@ -102,7 +102,7 @@ h1, h2, h3, h4, h5, b {font-family: inherit;}
 .center-text h3 {color: #060618;text-align: center;font-feature-settings: 'clig' off, 'liga' off;font-family: Glacial Indifference;font-size: 29px;font-style: normal;font-weight: 700;line-height: 35px; /* 95.833% */}
 a.cta {
     display: block;
-    padding: 10px 28px;
+    padding: 10px 32px;
     margin: 20px;
     border-radius: 49px;
 }
