--- a/css/front-page.css
+++ b/css/front-page.css
@@ -1,6 +1,6 @@
 
 a.nav-link {
-    color: #0d2d35 !important;
+    color: #000000 !important;
 }
 
 .main-banner-wrap {
@@ -20,18 +20,26 @@ a.nav-link {
     width: 70%;
 }
 .text-content h1 {
-    color: #1b4854;
-    font-family: inherit;
-    font-weight: 600;
+    color: #000000;
+    font-weight: 700;
+    font-family: "Manrope", sans-serif;
+    font-size: 34px;
 }
 .text-content p {
-    color: #000000;
+    color: #717171;
+}
+.cta-container-banner {
+    display: flex;
+    align-items: center;
 }
 .cta-banner-fp {
     background: #fbb03b;
     color: #000;
     width: 200px;
     margin: 0 !important;
+}
+.cta-border-solid-fp {
+    border: 1px solid;
 }
 .resources-container {
     background: #ffffff;
@@ -122,7 +130,7 @@ svg.love {
     justify-items: center;
     justify-content: center;
     grid-gap: 10px;
-    padding-bottom: 58px;
+    padding-bottom: 122px;
 }
 
 .get-it-now-wrap p {
@@ -141,14 +149,14 @@ span.s-block {
 }
 span.s-block i {
     font-size: 52px;
-    color: #163d3c;
+    color: #000000;
 }
 
 .trio {
-    height: 200px;
-    background: #e5ece4;
+    height: 244px;
     position:relative;
     width: 100%;
+    background: linear-gradient(0deg, rgba(255, 255, 255, 1) 3%, rgb(244 244 244) 97%);
 }
 .trio:before {
     content: "";
@@ -163,20 +171,7 @@ span.s-block i {
     left: 0;
     z-index: 5555555555555555555555;
 }
-.trio:after {
-    content: "";
-    background-image: url('../img/after-before.png');
-    background-size: 100% auto;
-    background-repeat: no-repeat;
-    height: 64%;
-    display: inline-block;
-    width: 100%;
-    position:absolute;
-    bottom: -112px;
-    left: 0;
-    z-index: 5555555555555555555555;
-    rotate: 180deg;
-}
+
 
 
 .resources {
@@ -216,7 +211,7 @@ span.s-block i {
 }
 .sc {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: auto auto auto;
     align-items: center;
     align-content: center;
     width: 100%;
@@ -227,16 +222,15 @@ span.s-block i {
     width: 100%;
 }
 .scub {
-    display: grid;
-    grid-template-columns: auto auto;
+    display: flex;
     justify-content: start;
     align-items: center;
     padding: 10px;
+    flex-direction: column;
 }
 
 .excerpt-image {
     display: block;
-    width: 132px;
 }
 .web h3 {
     padding: 8px;
@@ -250,8 +244,7 @@ span.s-block i {
 .excerpt-image img {
     width: 100%;
     height: auto;
-    border-radius: 14px;
-    border: 5px solid #ebebeb;
+    border-radius: 10px;
 }
 div#freelancer-online {
 }
