--- a/css/archive-jobs.css
+++ b/css/archive-jobs.css
@@ -26,8 +26,6 @@ button.archive-job-serach-button {
     background: #f3f7f0;
 }
 div#datafetch {
-    background: #bbb;
-    padding: 20px;
 }
 
 
@@ -120,45 +118,54 @@ video {
 	position: relative;
 	width: 100%;
 	display: flex;
+	background: #ffffff;
+	margin-bottom: 5px;
+	padding: 15px 29px;
+	flex-wrap: nowrap;
+	align-items: center;
+	flex-direction: row;
+	justify-content: space-between;
+}
+.job-snippet {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.job-snippet-wrap {
+    display: flex;
+    flex-direction: column;
+}
+.job-snippet-content {
+    display: flex;
+    align-items: center;
 }
 .gallery-item a {
-	display: inline-block;
 	position: relative;
-	margin: 4px;
-	background: rgb(234, 239, 231);
-	width: 100%;
-	min-height: 117px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
 	border-radius: 5px;
-	padding: 30px 0 9px;
-	flex-direction: column;
-	flex-wrap: nowrap;
-	align-content: center;
+	padding: 8px 20px;
+	background: #555555;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: #fff;
 }
 .gallery-item b {
     color: #676767;
-    padding: 10px 31px;
     font-size: 13px;
     background: #00000000;
-    position: relative;
-    bottom: 0;
-    padding: 18px;
     text-transform: capitalize;
 }
 
 .gallery-item img {
-	height: 103px;
+	height: 76px;
 	width: auto;
 	filter: grayscale(1);
 }
 
 .gallery-filter {
-	padding: 0 15px;
 	width: 100%;
-	text-align: center;
-	margin-bottom: 78px;
+	display: flex;
+	justify-content: flex-end;
 }
 
 .gallery-filter .filter-item {
@@ -173,7 +180,7 @@ video {
 	font-family: 'Open Sans', sans-serif;
 	background: #bbbbbb38;
 	margin: 2px;
-	border-radius: 5px;
+	border-radius: 3px;
 }
 
 .gallery-filter .filter-item.active {
