--- a/css/base.css
+++ b/css/base.css
@@ -10,7 +10,18 @@ body {
     background-color: #f8f8f8;
     width: 100%;
 }
-h1, h2, h3, h4, h5, b {font-family: "Manrope", sans-serif;}
+h1, h2, h3, h4, h5 {font-family: "Manrope", sans-serif;position: relative;padding-bottom: 18px;margin-bottom: 36px;}
+
+.custom-header-border-bottom:after {
+    content: "";
+    position: absolute;
+    background: #FFC107;
+    width: 19%;
+    height: 10px;
+    bottom: -9px;
+    left: 0;
+    border-radius: 5px;
+}
 .container-width-1100 {
     width: 1100px;
     margin: 0 auto;
@@ -105,6 +116,7 @@ a.cta {
     padding: 10px 32px;
     margin: 20px;
     border-radius: 49px;
+    font-weight: 600;
 }
 .cta-white {
     background: #fbb03b;
