--- a/css/oz.css
+++ b/css/oz.css
@@ -98,17 +98,22 @@
 }
 
 .navbar-nav > li {
-	padding-right: 36px;
-	margin-right: 13px;
+	padding-right: 18px;
+	margin-right: 4px;
 }
 .navbar-nav .nav-link {
 	padding: 10px 20px;
 	text-decoration: none;
-	font-size: 1.2em;
-	font-weight: 400;
+	font-size: 1.0em;
+	font-weight: 500;
 	display: block;
 	transition: 150ms ease;
 	text-transform: capitalize;
+	letter-spacing: 1px;
+}
+.navbar-nav .nav-item {
+	position: relative;
+	transition: all 1s ease-out;
 }
 .navbar-nav .nav-item {
 	position: relative;
@@ -119,7 +124,7 @@ li.nav-item.arrow {
 }
 li.nav-item.arrow:hover {
     position: relative;
-    background: #fff;
+    background: rgb(255 255 255);
     box-shadow: 0 5px 5px 0px rgba(0, 0, 0, 0.15);
 }
 .navbar-nav > .nav-item:hover {
@@ -231,22 +236,25 @@ li.nav-item.arrow:hover {
 .nav-item .dropdown {
 	display: block;
 	position: absolute;
-	top: 47px;
+	background: #ffffff;
+	top: 44px;
 	transition: 300ms;
 	opacity: 0;
 	visibility: hidden;
 	transform: translateY(5px);
 	border-top: 1px solid rgba(0, 0, 0, 0.15);
-	border-radius: 0 0 7px 7px;
+	border-radius: 7px 0 7px 7px;
 	z-index: 7;
 	box-shadow: 0 5px 5px 0px rgba(0, 0, 0, 0.15);
 	padding: 0 !important;
 	right: 0;
-	width: 100%;
+	width: max-content;
+	min-width: 100%;
+	backdrop-filter: blur(62px);
 }
 .nav-item .dropdown .nav-link {
 	color: #000000;
-	font-size: 20px;
+	font-size: 15px;
 	padding: 10px 20px;
 }
 .nav-item .dropdown .dropdown {
@@ -275,12 +283,21 @@ li.nav-item.arrow:hover {
 	color: #0081ff;
 }
 .nav-item .dropdown .nav-item {
-	background: rgb(255 255 255);
 	width: 100%;
-	backdrop-filter: blur(18px);
+}
+.dropdown .nav-item:after {
+	content: "";
+	position: absolute;
+	width:100%;
+	height: 1px;
+	background: linear-gradient(90deg, rgb(235 235 235) 5%, rgb(237 229 229) 17%, rgb(237 237 237) 83%, rgba(255, 255, 255, 1) 95%);
+	z-index:5555555555;
 }
 .nav-item .dropdown .nav-item:last-child {
 	border-radius: 0 0 7px 7px;
+}
+.nav-item .dropdown .nav-item:first-child {
+	border-radius: 7px 0 0 0;
 }
 .nav-item:hover > .dropdown {
 	opacity: 1;
@@ -644,11 +661,11 @@ button.btn-search i {
   width: 7px;
   height: 7px;
   position: absolute;
-  right: 22px;
-  top: 29px;
+  right: 20px;
+  top: 25px;
   border-width: 0.4vmin 0.4vmin 0 0;
   border-style: solid;
-  border-color: #d67e51;
+  border-color: #182153;
   transition: 0.2s ease;
   display: block;
   transform-origin: 100% 0;
