--- a/css/base.css
+++ b/css/base.css
@@ -15,12 +15,12 @@ h1, h2, h3, h4, h5 {font-family: "Manrope", sans-serif;position: relative;paddin
 .custom-header-border-bottom:after {
     content: "";
     position: absolute;
-    background: #FFC107;
+    background: #FF5722;
     width: 19%;
-    height: 10px;
+    height: 3px;
     bottom: -9px;
     left: 0;
-    border-radius: 5px;
+    border-radius: 0px;
 }
 .container-width-1100 {
     width: 1100px;
@@ -115,8 +115,9 @@ a.cta {
     display: block;
     padding: 10px 32px;
     margin: 20px;
-    border-radius: 49px;
+    border-radius: 0px;
     font-weight: 600;
+    border-radius: 3px;
 }
 .cta-white {
     background: #fbb03b;
