--- a/css/front-page.css
+++ b/css/front-page.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(0deg, rgb(133 133 133) 0%, rgb(255 255 255) 98%);
+    background: linear-gradient(0deg, rgb(0 0 0) 0%, rgb(24 33 83) 98%);
 }
 a.nav-link {
     color: #000000;
@@ -28,27 +28,27 @@ a.nav-link {
 .text-content {
 }
 .text-content h1 {
-    color: #182153;
+    color: #ffffff;
     font-weight: 700;
     font-family: "Manrope", sans-serif;
     font-size: 34px;
 }
 .text-content p {
-    color: #000000;
+    color: #ffffff;
 }
 .cta-container-banner {
     display: flex;
     align-items: center;
 }
 .cta-banner-fp {
-    background: #182153;
-    color: #ffffff;
+    background: #ffffff;
+    color: #000000;
     width: 200px;
     margin: 0 !important;
 }
 .cta-border-solid-fp {
-    border: 1px solid #182153;
-    color: #182153;
+    border: 1px solid #ffffff;
+    color: #ffffff;
 }
 .resources-container {
     background: #ffffff;
@@ -127,7 +127,24 @@ svg.love {
     border-radius: 4px;
     box-shadow: 4px 4px 6px -2px #3e3e3e;
 }
-.service-blocks {}
+.service-blocks {
+    position:relative;
+    background: linear-gradient(0deg, rgba(255, 255, 255, 1) 3%, rgb(244 244 244) 97%);
+}
+.service-blocks:before {
+    content: "";
+    background-image: url('../img/after-before.png');
+    background-size: 100% 48px;
+    background-repeat: no-repeat;
+    height: 48px;
+    display: inline-block;
+    width: 100%;
+    position:absolute;
+    top: -45px;
+    left: 0;
+    z-index: 5555555555555555555555;
+}
+
 .service-blocks-wrap {
     display: grid;
     grid-template-columns: 25% 25% 25% 25%;
@@ -169,19 +186,6 @@ span.s-block i {
     position:relative;
     width: 100%;
     background: linear-gradient(0deg, rgba(255, 255, 255, 1) 3%, rgb(244 244 244) 97%);
-}
-.trio:before {
-    content: "";
-    background-image: url('../img/after-before.png');
-    background-size: 100% 48px;
-    background-repeat: no-repeat;
-    height: 48px;
-    display: inline-block;
-    width: 100%;
-    position:absolute;
-    top: -45px;
-    left: 0;
-    z-index: 5555555555555555555555;
 }
 
 .trio-wrap {
