--- a/css/front-page.css
+++ b/css/front-page.css
@@ -1,12 +1,11 @@
 body {
-    background: linear-gradient(0deg, rgb(0 0 0) 0%, rgb(24 33 83) 98%);
+    background: linear-gradient(0deg, rgb(0 0 0) 0%, rgb(12 17 49) 98%);
 }
 a.nav-link {
     color: #000000;
 }
 
-.main-banner-wrap {
-}
+.main-banner-wrap {background: url(../img/bg-banner-home5.png);background-size: 100% 100%;}
 .main-banner {
     display: grid;
     grid-template-columns: 50fr 50fr;
@@ -35,6 +34,7 @@ a.nav-link {
 }
 .text-content p {
     color: #ffffff;
+    font-size: 18px;
 }
 .cta-container-banner {
     display: flex;
@@ -170,7 +170,7 @@ span.s-block {
 }
 .service-blocks-wrap span:nth-child(2) {
     background: #182153 !important;
-    border-radius: 0px;
+    border-radius: 5px;
     color: #fff;
 }
 .service-blocks-wrap span:nth-child(2) i {
@@ -185,7 +185,7 @@ span.s-block i {
     height: 244px;
     position:relative;
     width: 100%;
-    background: linear-gradient(0deg, rgba(255, 255, 255, 1) 3%, rgb(244 244 244) 97%);
+    background: #fff;
 }
 
 .trio-wrap {
