--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: WpAdroit
-Theme URI: 
+Theme URI: https://github.com/noufalbinu/wpadroit.git
 Description: ~~~~
 Version: 1.0.1
 Author: WpAdroit
