--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@
 Theme Name: WpAdroit
 Theme URI: https://github.com/noufalbinu/wpadroit.git
 Description: ~~~~
-Version: 1.0.2
+Version: 1.0.4
 Author: WpAdroit
 Author URI: 
 Tags: ~~~
 */
 
 body {
-    background-color: #bbb;
+    background-color: transparent;
 }
