--- a/css/footer.css
+++ b/css/footer.css
@@ -124,7 +124,9 @@ div#footer-cap {
     position: relative;
     padding: 20px 0 3px;
 }
-
+div#footer-cap p {
+    color: #676767;
+}
 .socialmedia-footer svg {
     width: 48px;
     padding: 12px;
