--- a/css/base.css
+++ b/css/base.css
@@ -112,15 +112,14 @@ h1, h2, h3, h4, h5 {font-family: "Manrope", sans-serif;position: relative;paddin
     font-size: 48px;font-style: normal;font-weight: 700;line-height: 0; /* 95.833% */}
 .center-text h3 {color: #060618;text-align: center;font-feature-settings: 'clig' off, 'liga' off;font-family: Glacial Indifference;font-size: 29px;font-style: normal;font-weight: 700;line-height: 35px; /* 95.833% */}
 a.cta {
-    display: block;
+    display: inline-block;
     padding: 10px 32px;
-    margin: 20px;
     border-radius: 0px;
     font-weight: 600;
     border-radius: 3px;
 }
 .cta-white {
-    background: #fbb03b;
+    background: #ffffff;
     color:#000
 }
 .cta-blue {
