--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: WpAdroit
+Theme Name: WpAdroit latest
 Theme URI: https://github.com/noufalbinu/wpadroit.git
 Description: ~~~~
 Version: 1.0.5
