--- a/css/archive-jobs.css
+++ b/css/archive-jobs.css
@@ -1,26 +1,72 @@
+.careers-bnr {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: url(../img/careers-bg.jpg);
+    background-size: 100% auto;
+    background-position: center;
+    color: #fff;
+    height: 439px;
+    justify-content: flex-end;
+}
 .job-archive-banner-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: #d6e9ee;
-    padding: 20px;
+    background: #0c1130;
+    color: #fff;
+    justify-content: flex-end;
+    width: 100%;
+    height: 100%;
+    padding: 50px;
 }
-
+form.search-form {
+    display: flex
+;
+    align-items: center;
+}
 .search-input-button-group {
     display: flex;
+    align-items: center;
 }
 input#keyword {
     border: 1px solid #0b6e89;
+    border-radius: 5px 0 0 5px;
+    border-right: 0;
     padding: 15px 30px;
     width: 300px;
-    border-radius: 5px 0 0 5px;
+    height: 55px;
+}
+select#location {
+  padding-right: 56px;
+  padding-left: 20px;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E');
+  background-repeat: no-repeat, repeat;
+  background-position: right .7em top 50%, 0 0;
+  background-size: .65em auto, 100%;
+  font-size: 14px;
+  font-weight: 600;
+  height: 53px;
+  border: 1px solid #fff;
+}
+
+/* For IE (thanks to @SaiManoj) */
+select#location::-ms-expand {
+  display: none;
 }
 button.archive-job-serach-button {
-    background: #0b6e89;
-    padding: 15px;
-    border: 1px solid #0b6e89;
-    border-radius: 0 5px 5px 0;
+    background: #ff5722;
+    padding: 17px 30px;
+    border: 1px solid #ff5722;
     color: #fff;
+    font-weight: 600;
+    font-size: 15px;
+    text-transform: uppercase;
+    border-radius: 0 5px 5px 0;
+    height: 53px;
 }
 .container-100 {
     background: #f3f7f0;
@@ -28,214 +74,100 @@ button.archive-job-serach-button {
 div#datafetch {
 }
 
-
-
-.portfolio-single-container {
-    color: #000;
+.job-archive-wrap {
+    display: grid;
+    grid-template-columns: repeat(3, minmax(0,1fr));
+    gap: 10px;
+    margin-top: 40px;
+    justify-items: stretch;
 }
-.portfolio-archive-container,
-.portfolio-single-container {
-	padding: 5% 0;
-	border-radius: 0 0 8px 8px;
-}
-
-.portfolio-thumbnail-container {
-	float: left;
-	width: 100%;
-	padding: 10px 10px 10px 0;
-}
-
-.portfolio-thumbnail {
-	float: left;
-	display: inline;
-	position: relative;
-	text-align: center;
-}
-
-.portfolio-thumbnail img {
-	width: 100%;
-	height: auto;
-	border: 1px solid #bbb;
-}
-
-.portfolio-archive-title {
-	position: absolute;
-	bottom: 20%;
-	background: #0000008c;
-	color: #fff;
-	width: 70%;
-	padding: 8px;
-	right: 0;
-	left: 0;
-	margin: auto;
-	border: 1px solid #ffffff69;
-}
-.project-details {
-    border: 1px solid #bbbb;
-    border-radius: 10px;
-    background: #676565;
-    color: #fff;
-    box-shadow: inset 1px 1px 66px -41px #000;
-    text-align: left;
-    padding: 0 20px 0 20px;
-}
-.project-details p:nth-child(2) {
-    border: 1px solid #585858bb;
-    border-width: 1px 0 1px 0;
-    padding: 13px 0 13px 0;
-}
-.main-post-div {
-	padding: 0 15%;
-}
-.wpp-pagination {
+.job-container {
+    border: 1px solid #c9bebe;
     display: flex;
-    flex-wrap: nowrap;
-    align-content: center;
+    padding: 16px;
+    background: #fff;
+}
+.job-container a, .job-container p {
+    color:#000;
+}
+.job-taxonomy {
+    display: flex;
+    gap: 10px;
+}
+.job-taxonomy span i {
+    color: #dd0000;
+}
+.job-taxonomy span{
+    display: flex;
+    align-items: center;
+}
+.job-taxonomy span p{
+    padding-left:5px
+}
+.job-taxonomy span i{
+    padding-right: inherit;
+}
+
+.job-archive-pagination {
+    display: flex;
     justify-content: center;
-    align-items: center;
-    margin-top: 34px;
-	padding-top: 20px;
-    border-top: 1px solid #c3bfbf;
+    gap: 5px;
+    margin: 20px;
 }
-.wpp-pagination b {
-    color: #000;
+a.page-numbers {
+    border: 1px solid #dd0000;
+    padding: 5px 10px;
+    border-radius: 5px;
+    background: #fff;
+    color: #d00;
 }
-img,
-video {
-	max-width: 100%;
-	vertical-align: middle;
+span.page-numbers.current {
+    border: 1px solid #cdcdcd;
+    padding: 5px 10px;
+    border-radius: 3px;
+    color: #bbb;
+    background: #fff;
 }
-
-.gallery-filter {
-	color: #fff;
-}
-.masonry {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-}
-.gallery-item {
-	position: relative;
-	width: 100%;
-	display: flex;
-	background: #ffffff;
-	margin-bottom: 5px;
-	padding: 15px 29px;
-	flex-wrap: nowrap;
-	align-items: center;
-	flex-direction: row;
-	justify-content: space-between;
-}
-.job-snippet {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-.job-snippet-wrap {
-    display: flex;
-    flex-direction: column;
-}
-.job-snippet-content {
-    display: flex;
-    align-items: center;
-}
-.gallery-item a {
-	position: relative;
-	border-radius: 5px;
-	padding: 8px 20px;
-	background: #555555;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	color: #fff;
-}
-.gallery-item b {
-    color: #676767;
-    font-size: 13px;
-    background: #00000000;
-    text-transform: capitalize;
-}
-
-.gallery-item img {
-	height: 76px;
-	width: auto;
-	filter: grayscale(1);
-}
-
-.gallery-filter {
-	width: 100%;
-	display: flex;
-	justify-content: flex-end;
-}
-
-.gallery-filter .filter-item {
-	color: #444444;
-	font-size: 15px;
-	text-transform: uppercase;
-	display: inline;
-	padding: 10px 17px;
-	cursor: pointer;
-	line-height: 1.2;
-	transition: all 0.3s ease;
-	font-family: 'Open Sans', sans-serif;
-	background: #bbbbbb38;
-	margin: 2px;
-	border-radius: 3px;
-}
-
-.gallery-filter .filter-item.active {
-	color: #ffffff;
-	background: #0b6e89;
-}
-
-.gallery-item-inner img {
-	width: 100%;
-}
-
-.gallery-item.show {
-	animation: fadeIn 0.5s ease;
-}
-
-@keyframes fadeIn {
-	0% {
-		opacity: 0;
-	}
-
-	100% {
-		opacity: 1;
-	}
-}
-
-.gallery-item.hide {
-	display: none;
-}
-
 /*responsive*/
 @media(max-width: 991px) {
-	.gallery-item {
-		width: 50%;
-	}
+	
 }
 
 @media(max-width: 767px) {
-	.gallery-item {
-		width: 100%;
-	}
+	
+}
+@media screen and (max-width: 767px) {
+    .careers-bnr-contents {
+        width: 100%;
+    }
+    .job-archive-banner-container {
+        padding: 50px 20px;
+    }
+    .careers-bnr {
+        background-size: auto 152%;
+    }
+    .careers-bnr-contents h1 {
+        font-size: 25px;
+    }
+    .search-input-button-group {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+    input#keyword {
+        border-radius: 10px;
+        width: 100%;
 
-	.gallery-filter .filter-item {
-		margin: 3px;
-		padding: 9px 9px;
-		background: #fffbfb;
-		font-size: 13px;
-	}
+    }
+    select#location {
+        border-radius: 10px;
+        height: 50px;
+    }
+    button.archive-job-serach-button {
+        border-radius: 10px;
+    }
 
-	.gallery-filter {
-		margin-bottom: 10px;
-		border: 0;
-		display: flex;
-		flex-direction: row;
-		flex-wrap: wrap;
-		align-content: center;
-		justify-content: center;
-	}
+    .job-archive-wrap {
+        grid-template-columns: repeat(1, minmax(0, 1fr));
+    }
 }
