--- a/css/front-page.css
+++ b/css/front-page.css
@@ -5,7 +5,19 @@ a.nav-link {
     color: #000000;
 }
 
-.main-banner-wrap {background: url(../img/bg-banner-home5.png);background-size: 100% 100%;}
+.main-banner-wrap {
+                   position:relative;
+                   background: url(../img/bg-banner-home5.png);
+                   background-size: 100% auto;
+                   }
+.main-banner-wrap:after {
+    content: "";
+    background: #0c113057;
+    height:100%;
+    width:100%;
+    position:absolute;
+    top: 0;
+}
 .main-banner {
     display: grid;
     grid-template-columns: 50fr 50fr;
@@ -24,8 +36,7 @@ a.nav-link {
     width: 300px;
     height: auto;
 }
-.text-content {
-}
+.text-content {position: relative;z-index: 5;}
 .text-content h1 {
     color: #ffffff;
     font-weight: 700;
@@ -39,6 +50,7 @@ a.nav-link {
 .cta-container-banner {
     display: flex;
     align-items: center;
+    gap: 10px;
 }
 .cta-banner-fp {
     background: #ffffff;
@@ -129,32 +141,29 @@ svg.love {
 }
 .service-blocks {
     position:relative;
-    background: linear-gradient(0deg, rgba(255, 255, 255, 1) 3%, rgb(244 244 244) 97%);
+    background: #ffffff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-.service-blocks:before {
-    content: "";
-    background-image: url('../img/after-before.png');
-    background-size: 100% 48px;
-    background-repeat: no-repeat;
-    height: 48px;
-    display: inline-block;
-    width: 100%;
-    position:absolute;
-    top: -45px;
-    left: 0;
-    z-index: 5555555555555555555555;
+.service-blocks-cards {
+    padding: 60px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-
+.service-blocks-cards h2 {
+    font-size: 28px;
+}
 .service-blocks-wrap {
     display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
-    padding: 30px 0;
-    color: #4a4a4a;
+    grid-template-columns: 25fr 25fr 25fr 25fr;
+    padding: 53px 0;
+    color: #4A4A52;
     align-items: center;
     justify-items: center;
     justify-content: center;
     grid-gap: 10px;
-    padding-bottom: 122px;
 }
 
 .get-it-now-wrap p {
@@ -164,34 +173,118 @@ svg.love {
 span.s-block {
     width: 100%;
     height: 300px;
-    padding: 30px;
     display: flex;
+    border-radius: 5px;
     flex-direction: column;
+    justify-content: center;
+}
+.s-icon-wrap {
+    padding: 0 30px;
+    background: #ececec;
+    height: 214px;
+    display: flex;
+    border-radius: 10px 10px 0 0;
+}
+.service-blocks-wrap span:nth-child(2) .s-icon-wrap {
+    background: #101535 !important;
+}
+span.s-block b {
+    background: #fbfbfb;
+    color: #635d5d;
+    padding: 0 30px;
+    height: 128px;
+    display: flex;
+    align-items: center;
+}
+span.s-block p {
+    padding: 21px 30px 0;
+    margin: 0 !important;!i;!;
+    height: 100%;
+    background: #ececec;
+}
+span.s-block svg {
+    width: 50px;
+    height: auto;
+}
+.service-blocks-wrap span:nth-child(1) {
+    border:none;
+}
+.service-blocks-wrap span:nth-child(1) b {
+    font-size:20px;
+    color:#000;
+    background: none;
+}
+.service-blocks-wrap span:nth-child(1) p {
+    background:none !important;
+    font-weight: 400;
+    font-size: 18px;
+    padding: 0 20px  0 0;
 }
 .service-blocks-wrap span:nth-child(2) {
-    background: #182153 !important;
     border-radius: 5px;
-    color: #fff;
+    color: #ffffff;
+    border: none;
+}
+
+.service-blocks-wrap span:nth-child(2) b {
+    background: linear-gradient(0deg, #4e3e8b 3%, #412d8f 97%);
+    color: #ffffff;
+    !i;!;
+}
+.service-blocks-wrap span:nth-child(2) p {
+    background: #101535;
+    color: #ffffff;
+    !i;!;
+    border-radius: 0 0 10px 10px;
+}
+.service-blocks-wrap span:nth-child(2) svg path {
+    fill:#fff !important;
 }
 .service-blocks-wrap span:nth-child(2) i {
     color: #fff;
 }
 span.s-block i {
     font-size: 52px;
-    color: #182153;
+    color: #8f9093;
 }
 
 .trio {
-    height: 244px;
-    position:relative;
     width: 100%;
     background: #fff;
+    display: flex;
+    position: relative;
 }
 
 .trio-wrap {
-    padding: 63px 0;
+    padding: 30px 60px;
+    display: flex;
+    align-items: center;
+    background: #0c1130;
+    border-radius: 10px;
+    gap: 30px;
+}
+.trio-text {
+    color: #fff;
+}
+.trio-wrap img {
+    width: 200px;
+}
+.ahcm {
+    display: flex;
+    background: #ffffff;
+    position:relative;
 }
 
+.ahcm-wrap {
+    display: flex;
+    padding: 60px 0;
+    gap: 60px;
+    align-items: center;
+}
+.cta-ahcm {
+    background: #1a255d;
+    color: #fff;
+}
 .resources {
     overflow: auto;
     width: 1100px;
