--- a/css/base.css
+++ b/css/base.css
@@ -117,6 +117,7 @@ a.cta {
     border-radius: 0px;
     font-weight: 600;
     border-radius: 3px;
+    text-align: center;
 }
 .cta-white {
     background: #ffffff;
