--- a/css/header.css
+++ b/css/header.css
@@ -52,9 +52,13 @@ p.notification-nav a {
     justify-content: center;
 }
 header {
-	position: relative;
+	position: absolute;
 	z-index: 5555;
-	background: #0c1130;
+	display: flex;
+	align-content: center;
+	justify-content: center;
+	width: 100%;
+	height: 87px;
 	}
 .header-wrap {
     height: 78px;
